# controle-financeiro

./: .env  .gitignore  LICENSE  README.md  manage.py  pyproject.toml  requirements.txt  scripts.py  setup.cfg
base/: models.py
base/templatetags/: transformar_em_texto.py
controle_financeiro/: asgi.py  manage.py  settings.py  settings_dev.py  urls.py
controle_financeiro/autenticacao/: apps.py  forms.py  urls.py  usecases.py  views.py
controle_financeiro/autenticacao/tests/: test_views.py
controle_financeiro/autenticacoes/: apps.py  urls.py  views.py
controle_financeiro/autenticacoes/tests/: test_views.py
controle_financeiro/base/: forms.py  models.py  views.py
controle_financeiro/base/forms/: monetary.py  monetary_input.py
controle_financeiro/base/templatetags/: dom_efeitos.py  transformar_em_texto.py
controle_financeiro/carteiras/: admin.py  apps.py  forms.py  models.py  urls.py  usecases.py  views.py
controle_financeiro/carteiras/migrations/: 0001_initial.py  0002_auto_20210403_2003.py  0002_auto_20210406_1224.py  0002_auto_20210406_2226.py  0002_initial.py  0003_alter_centrocusto_tipo.py  0003_carteira_principal.py
controle_financeiro/cartoes/: admin.py  forms.py  models.py  urls.py  usecases.py  views.py
controle_financeiro/cartoes/migrations/: 0001_initial.py  0002_cartao_criador.py
controle_financeiro/contas/: admin.py  forms.py  models.py  urls.py  usecases.py  views.py
controle_financeiro/contas/migrations/: 0001_initial.py  0002_alter_conta_centro_custo.py
controle_financeiro/controle_financeiro/: asgi.py  urls.py  wsgi.py
controle_financeiro/controle_financeiro/settings/: base.py  local.py  production.py  test.py
controle_financeiro/controle_financeiro/urls/: base.py  local.py  test.py
controle_financeiro/despesas/: admin.py  forms.py  models.py  urls.py  views.py
controle_financeiro/despesas/migrations/: 0001_initial.py  0002_despesa_criador.py
controle_financeiro/despesas/templatetags/: despesa_calculos.py
controle_financeiro/gerenciamento/: urls.py  views.py
controle_financeiro/home/: urls.py  views.py
controle_financeiro/lancamentos/: admin.py  apps.py  forms.py  models.py  urls.py  usecases.py  views.py
controle_financeiro/lancamentos/migrations/: 0001_initial.py  0002_auto_20210414_2135.py  0003_alter_despesa_situacao.py  0003_alter_parcela_despesa.py  0004_auto_20210420_2132.py
controle_financeiro/lancamentos/templatetags/: despesa_calculos.py  lancamento_extras.py
controle_financeiro/paginas/: apps.py  urls.py  views.py
controle_financeiro/pessoas/: admin.py  models.py
controle_financeiro/publico/: urls.py  views.py
controle_financeiro/publico/tests/: test_views.py
controle_financeiro/settings/: base.py  local.py  test.py
controle_financeiro/usuarios/: forms.py  models.py
despesas/: admin.py  forms.py  models.py  urls.py  views.py
despesas/migrations/: 0001_initial.py
settings/: test.py
(+112 files in other folders)
