[tool.poetry]
name = "controle-financeiro"
version = "0.1.0"
description = "Controle finaceiro de contas"
authors = ["Douglas Panhota <douglaspands@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.7"
python-decouple = "^3.4"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
runserver = "scripts:runserver"
migrate = "scripts:migrate"
startapp = "scripts:startapp"
makemigrations = "scripts:makemigrations"
requirements = "scripts:requirements"
createsuperuser = "scripts:createsuperuser"
