[tool.poetry]
name = "controle-financeiro"
version = "0.2.0"
description = "Controle finaceiro de contas"
authors = ["Douglas Panhota <douglaspands@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.7"
python-decouple = "^3.4"
python-dateutil = "^2.8.1"
django-crispy-forms = "^1.11.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"
pytest-django = "^4.1.0"
pytest-cov = "^2.11.1"
django-debug-toolbar = "^3.2"
mypy = "^0.812"
ipython = "^7.22.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
runserver = "scripts:runserver"
test = "scripts:test"
lint = "scripts:lint"
migrate = "scripts:migrate"
startapp = "scripts:startapp"
makemigrations = "scripts:makemigrations"
requirements = "scripts:requirements"
createsuperuser = "scripts:createsuperuser"
collectstatic = "scripts:collectstatic"
shell = "scripts:djangoshell"
dbshell = "scripts:dbshell"
